@@ -74,6 +74,7 @@ my $build = Module::Build->new(
         'JSON::MaybeXS'          => 0,
         'Kwalify'                => 0,
         'List::SomeUtils'        => '0.07',
+        'Path::Tiny'             => 0,
         'Perl6::Slurp'           => 0,
         'Pod::Thread'            => '3.00',
         'Template'               => 0,
