@@ -137,6 +137,7 @@ requirements: |
   * JSON::MaybeXS
   * Kwalify
   * List::SomeUtils 0.07 or later
+  * Path::Tiny
   * Perl6::Slurp
   * Pod::Thread 3.00 or later
   * Template (part of Template Toolkit)
