@@ -67,7 +67,7 @@ my $links = <<'EOD';
   <link rel="up" href="../" title="DocKnot" />
   <link rel="top" href="../../../" />
 EOD
-my $comment = '<!-- Spun by DocKnot %VERSION% on %DATE% -->';
+my $comment = '<!-- Spun from DocKnot.pm by DocKnot %VERSION% on %DATE% -->';
 my $navbar = <<'EOD';
 <table class="navbar"><tr>
   <td class="navleft"></td>
@@ -78,7 +78,6 @@ my $navbar = <<'EOD';
   </td>
   <td class="navright"><a href="app-docknot-command.html">App::DocKnot::Command</a>&nbsp;&gt;</td>
 </tr></table>
-
 EOD
 my $address = <<'EOD';
 <address>
@@ -89,7 +88,7 @@ EOD
 $html =~ s{ (</head>) }{$links$1}xms;
 $html =~ s{ <!-- [ ] Spun .*? [ ] --> }{$comment}xms;
 $html =~ s{ (<body> \n) }{$1$navbar}xms;
-$html =~ s{ (</body>) }{$navbar$address$1}xms;
+$html =~ s{ (</body>) }{$navbar\n$address$1}xms;
 
 # Replace the expected data file.
 my $output = File::Spec->catdir(
