@@ -14,7 +14,7 @@
   <link rel="top" href="../../../" />
 </head>
 
-<!-- Spun by DocKnot %VERSION% on %DATE% -->
+<!-- Spun from DocKnot.pm by DocKnot %VERSION% on %DATE% -->
 
 <body>
 <table class="navbar"><tr>
